--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.3.0",
     "plotly>=6.1.2",
     "polars>=1.31.0",
+    "pyarrow>=20.0.0",
     "python-dotenv>=1.1.0",
     "rich>=14.0.0",
     "seaborn>=0.13.2",
